# devmatrix-mvp

./: .env.example  .gitignore  .pre-commit-config.yaml  AI-USAGE-TERMS.md  ANALISIS_ARQUITECTURA_HIBRIDA.md  ANALISIS_CALIDAD_RAG_ULTRAPROFUNDO.md  ANALISIS_RAG_PROFUNDO.md  ANALYSIS.md  ARCHITECTURE.txt  ARCHITECTURE_RULES.md  BACKUPS_MANIFEST.md  BACKUP_DISCOVERY_JIRA_SAAS.json  BOILERPLATE_GRAPH_ANALYSIS.md  BOILERPLATE_GRAPH_COMPLETE.md  CHANGELOG.md  CLEANUP_FINAL_CORRECT.md  CLEANUP_SUMMARY.md  CONSOLE_TOOL_HANDOFF.md  CONTRIBUTING.md  COORDINATION.md  CRITICAL_FIX_SESSION_ID_ARCHITECTURE.md  CRITICAL_FIX_SUMMARY.md  Claude.md  DEPLOYMENT.md  Dockerfile  FINAL_CLEANUP_COMPLETE.md  FINDINGS_SUMMARY.md  FIX_COMPLETE_FINAL_STATUS.md  FIX_SUMMARY_SESSION_ID.md  HOW_TO_MEASURE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LIVE_TESTING_ANALYSIS.md  MASTERPLAN_PROGRESS_DEBUGGING_GUIDE.md  MERGE_READY_STATUS.md  MESSAGE_TO_OTHER_CLAUDE.md  MIGRATION_CHECKLIST.md  MODAL_FIX_SUMMARY.md  PATTERN_VALIDATOR_README.md  PHASE2_COMPLETION_REPORT.md  (+66 more)
.agent/: implementation_plan_schema_fixes.md  pr_description.md  schema_fix_final.md  schema_fix_verification.md  schema_fixes_summary.md
DOCS/: ANALISIS_COMPLETO_2025_11_12.md  API_REFERENCE.md  ARBOL_ATOMICO_ANALISIS.md  ARBOL_ATOMICO_ZERO_TEMPLATE.md  ARCHITECTURE.md  Ariel_front_figma.md  DEEP_DIVE_REPORTE_COMPLETO.md  DEVOPS_GUIDE.md  DOCUMENTATION_VS_REALITY_AUDIT.md  LEARNING_LAYER_INTEGRATION.md  LOGGING_COMPLETION_PLAN.md  LOGGING_IMPROVEMENT_PLAN.md  MGE_V2_IMPLEMENTATION_COMPLETE.md  PHASE2_COST_BENEFIT_ANALYSIS.md  PHASE2_IMPLEMENTATION_PLAN.md  PHASE2_INDEX.md  PHASE2_LLM_EXTRACTOR.md  PHASE2_PROMPT_EXAMPLES.md  PHASE2_TESTING_STRATEGY.md  PHASE2_TESTING_SUMMARY.md  PROJECT_MEMORY.md  README.md  TESTING_GUIDE.md  VERIFIED_CLEANUP_ANALYSIS.md  WEB_UI.md  WORKPLAN.md  ariel.md  ariel2.md  ariel_front_tailwind.md  grok.md
DOCS_BACKUP_20251110_182144/: CURRENT_STATE.md  MASTERPLAN_FLOW_DIAGRAM.md  MASTERPLAN_ISSUES_PRIORITIZED.md  P0_CRITICAL_FIXES_IMPLEMENTATION.md  PHASE_1_SECURITY_SUMMARY.md  RAG_METRICS.md  RAG_OPTIMIZATION.md  README.md  WORKPLAN.md  mge_v2_analysis_and_implementation_plan.md  mge_v2_final_status_report.md
agent-os/: config.yml
alembic/: README.md  env.py
backups/: BACKUP_COMPLETE_20251120_133631.md  BACKUP_METADATA.md  BACKUP_STATUS_2025-11-20_FINAL.md  BACKUP_SUMMARY_2025-11-20.md  BACKUP_VERIFICATION_REPORT_20251120_135411.txt  MIGRATION_FINAL_STATUS_2025-11-20.md  backup_neo4j.py  backup_qdrant.py  migrate_all_neo4j_patterns.sh  migrate_neo4j_add_missing_fields.py  migrate_qdrant_enrich_metadata.py  (+1 more)
docker/: README.md  (+1 more)
(+3131 files in other folders)
